--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@ body {
   height: 100%;
   width: 100%;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
+  /* font-smoothing: antialiased; */
 }
-
 h1,
 h2,
 h3,
@@ -147,7 +147,7 @@ span {
 .course-item .ci-icon:after,
 .footer-section,
 .blog-item .blog-date {
-  background: #7364b06e;
+  background: #5137bb6e;
   /* Old browsers */
   /* FF3.6-15 */
   /* Chrome10-25,Safari5.1-6 */
@@ -155,8 +155,8 @@ span {
     linear,
     left top,
     right top,
-    from(#7364b06e),
-    to(#ffb8e76e)
+    from(#715ebe6e),
+    to(#fa90d66e)
   );
   background: linear-gradient(to right, #7364b06e 0%, #ffb8e76e 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -970,6 +970,7 @@ span {
 
 .footer-section {
   padding: 24px 0;
+  /* box-shadow: 0px -2px 5px 0px rgb(188, 188, 197); */
 }
 
 .footer-section p {
@@ -1447,7 +1448,7 @@ span {
 
 .contact-text ul li {
   font-size: 14px;
-  color: #938e99;
+  color: #f0f0f0;
   margin-bottom: 10px;
 }
 
@@ -1722,7 +1723,7 @@ span {
   }
 
   .meditation-section {
-    margin-top: -320px;
+    margin-top: -270px;
   }
   .map-warp {
     position: relative;
