--- a/css/style.css
+++ b/css/style.css
@@ -856,7 +856,20 @@ span {
       margin-top:0px;
       color: black
   }
-
+  .register-btn{
+    background: #bc5f7d;
+    color: #fff;
+    position: relative;
+    top:20px;
+    left:80%;
+    padding: 10px 15px;
+    border-radius:5px;
+    text-decoration: none;
+  } 
+  .register-btn:hover {
+    background: #be4d71;
+    color: rgb(228, 228, 228);
+  }
 /* ----------------
     Timetable section
    ---------------------*/
